@@ -6,6 +6,9 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20642).
   * Support 'orientation' property (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=20650).
+  * The default RGB colorspace transform is now linear (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?p=82839#p82839).
+  * Prevent EXIF integer overflow (CVE-2012-1610).
 
 2012-03-30  6.7.6-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-3, SVN revision 7290.
